# OPNet

./: README.md
benchmark_result/: .~lock.result.csv#  .~lock.topo_result.csv#  pred_80_result.csv
krrt-planner/: occ_map.cpp
krrt-planner/decision/state_machine/: CMakeLists.txt  package.xml
krrt-planner/decision/state_machine/config/: params.yaml
krrt-planner/decision/state_machine/include/state_machine/: fsm.h
krrt-planner/decision/state_machine/launch/: RC5F.txt  RCwoods.txt  bench_aggres.launch  bench_rviz_map.launch  bench_safe.launch  bench_with_pred.launch  changlingpo.txt  dji.launch  planning.launch  planning_indoor.launch  pub_waypoint.launch  rviz.launch  rviz_remote.launch  simulator.launch  testWp.txt  topic_sim.launch  traj.rviz  wlztest.launch
krrt-planner/decision/state_machine/src/: fsm.cpp  pub_goal_node.cpp  state_machine_node.cpp  traj_server_node.cpp
krrt-planner/decision/vis_utils/: CMakeLists.txt  package.xml
krrt-planner/decision/vis_utils/include/vis_utils/: planning_visualization.h
krrt-planner/decision/vis_utils/src/: planning_visualization.cpp
krrt-planner/laser_simulator/: CMakeLists.txt  README.md
krrt-planner/laser_simulator/src/: laser_sim_node.cpp
krrt-planner/mapping/occ_grid/: CMakeLists-origin.txt  CMakeLists.txt  package.xml
krrt-planner/mapping/occ_grid/common/: logger.cpp
krrt-planner/mapping/occ_grid/include/occ_grid/: occ_map.h  raycast.h
krrt-planner/mapping/occ_grid/msg/: CenteredPointcloud.msg
krrt-planner/mapping/occ_grid/src/: dcgan.cpp  occ_map.cpp  occ_map_lidar.cpp  raycast.cpp
krrt-planner/opnet/: CMakeLists.txt  package.xml
krrt-planner/opnet/launch/: netnode.launch
krrt-planner/opnet/models/: no_surf.pth  no_surf_120_32.onnx  no_surf_120_40.onnx  no_surf_120_40.trt  no_surf_160_40.onnx  no_surf_200_40.onnx  no_surf_64_120_40.onnx  no_surf_80_120_40.onnx  no_surf_80_120_40.trt  no_surf_80_32.onnx  no_surf_80_32.trt  no_surf_80_40.onnx  no_surf_80_40.trt  nosdf_120_40.onnx  nosdf_80_120_40.onnx  nosdf_80_120_40.trt  nosdf_80_40.onnx  nosdf_80_40.trt  nosdf_v0.pth  nosdf_v1.pth
krrt-planner/opnet/src/: README.md
krrt-planner/opnet/src/filelists/: 5cm_80_40_train.txt  5cm_80_40_val.txt  h3_64.txt  h3_64_val.txt  name.txt  name2.txt
krrt-planner/opnet/src/torch_dense/: aspp3d.py  common.py  data_util.py  evluate.py  loss.py  model_dense_nosurf.py  scene_dataloader.py  train.py  train_nosurf.py  transform.py
krrt-planner/opnet/src/torch_dense/tools/: SSC_model.py  check_data.py  check_onnx.py  dummy_node.py  loadonnx.py  model.py  model_dense_sgnn.py  net_node.py  net_node_sub.py  net_node_trt.py  play_dataset.py  ros_vis.py  test_model.py  test_model_nosdf.py  test_model_nosurf.py  test_model_simple.py  test_scene.py  toonnx.py  torch_to_onnx.py  trt_runner.py  vis.py  vis_check.py.py
krrt-planner/planning/krrtstar/: CMakeLists.txt  package.xml
krrt-planner/planning/krrtstar/include/krrtstar/: krrtplanner.h  topo_prm.h  utils.h  visualize_rviz.h
krrt-planner/planning/krrtstar/launch/: default.rviz  krrtstar.launch  traj.rviz
krrt-planner/planning/krrtstar/src/: dynamicvoronoi.cpp  krrtplanner.cpp  topo_prm.cpp  visualize_rviz.cpp
krrt-planner/planning/poly_opt/: CMakeLists.txt  package.xml
krrt-planner/planning/poly_opt/include/poly_opt/: traj_optimizer.h  waypoint_opt.h
krrt-planner/planning/poly_opt/src/: traj_optimizer.cpp  waypoint_opt.cpp
krrt-planner/uav_simulator/Utils/rviz_plugins/: CMakeLists.txt
krrt-planner/uav_simulator/depth_sensor_simulator/: CMakeLists.txt
krrt-planner/uav_simulator/depth_sensor_simulator/src/: pcl_render_node.cpp  pointcloud_render_node.cpp
krrt-planner/uav_simulator/map_generator/src/: random_forest_sensing.cpp
ocp_msgs/: CMakeLists.txt  package.xml
ocp_msgs/msg/: OdomPcl.msg
ocp_msgs/srv/: PredictPCL.srv
